--- a/src/patternfly/components/Popover/popover.scss
+++ b/src/patternfly/components/Popover/popover.scss
@@ -47,7 +47,7 @@
   --#{$popover}__arrow--m-block-right--Right: var(--pf-t--global--border--radius--medium);
 
   // Close
-  --#{$popover}__close--Top: calc(var(--#{$popover}__content--PaddingTop) - (var(--pf-t--global--spacer--xs) * 1.5)); // align top of button with top of text
+  --#{$popover}__close--Top: calc(var(--#{$popover}__content--PaddingTop) - (var(--pf-t--global--spacer--xs) * 1.5)); // align top of button with top of text - TODO: replace with form element token
   --#{$popover}__close--Right: var(--#{$popover}__content--PaddingRight); // align right of content
   --#{$popover}__close--sibling--PaddingRight: var(--pf-t--global--spacer--2xl);
 
@@ -56,8 +56,9 @@
 
   // Title text
   --#{$popover}__title-text--Color: var(--pf-t--global--text--color--regular);
-  --#{$popover}__title-text--FontFamily: var(--pf-t--global--font--family--heading);
+  --#{$popover}__title-text--FontFamily: var(--pf-t--global--font--family--body);
   --#{$popover}__title-text--FontSize: var(--pf-t--global--font--size--body--lg);
+  --#{$popover}__title-text--FontWeight: var(--pf-t--global--font--weight--body--bold);
 
   // Title icon
   --#{$popover}__title-icon--MarginRight: var(--pf-t--global--spacer--sm);
@@ -246,6 +247,7 @@
 .#{$popover}__title-text {
   font-family: var(--#{$popover}__title-text--FontFamily);
   font-size: var(--#{$popover}__title-text--FontSize);
+  font-weight: var(--#{$popover}__title-text--FontWeight);
   color: var(--#{$popover}__title-text--Color);
 }
 
